--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genetic-search",
-  "version": "7.0.2",
+  "version": "7.0.3",
   "description": "Multiprocessing genetic algorithm implementation library",
   "license": "MIT",
   "repository": {
@@ -57,5 +57,6 @@
   },
   "types": "./lib/index.d.ts",
   "jsnext:main": "./es/index.js",
-  "sideEffects": false
+  "sideEffects": false,
+  "readme": "README.md"
 }
