--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jest": "jest",
     "format": "ts-scripts format",
     "lint": "ts-scripts lint",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "docs": "typedoc src/index.ts --out docs/api"
   },
   "files": [
     "es",
@@ -53,7 +54,7 @@
     "rimraf": "^4.4.0",
     "ts-expect": "^1.1.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "typescript": "^5.7.3"
   },
   "types": "./lib/index.d.ts",
   "jsnext:main": "./es/index.js",
