--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rimraf": "^4.4.0",
     "ts-expect": "^1.1.0",
     "ts-jest": "^29.0.3",
+    "typedoc": "^0.27.6",
     "typescript": "^5.7.3"
   },
   "types": "./lib/index.d.ts",
